# ataxx-skeleton

./: .gitignore  CMakeLists.txt  README.md  makefile
src/: eval.hpp  main.cpp  makemove.cpp  makemove.hpp  minimax.cpp  move.hpp  movegen.cpp  movegen.hpp  options.cpp  options.hpp  other.hpp  perft.cpp  perft.hpp  position.cpp  position.hpp  protocol.hpp  search.cpp  search.hpp  test.hpp  uai.cpp  valid.hpp
src/search/: eval.cpp  eval.hpp  minimax.cpp  search.cpp  search.hpp
src/uai/: display.cpp  go.cpp  isready.cpp  listen.cpp  moves.cpp  perft.cpp  position.cpp  protocol.hpp  search_options.cpp  setoption.cpp  split.cpp  uainewgame.cpp
tests/search/: tactics.cpp  timing.cpp
tests/uai/: moves.cpp  position.cpp  search_options.cpp
